--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:text="Define the line" />
+        android:text="Define the ray" />
 
     <TextView
         android:layout_width="wrap_content"
